--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -70,9 +70,22 @@
         @apply w-[100%] rounded-md p-4 bg-gray pl-12 border border-gray focus:bg-transparent placeholder:text-black;
     }
 
+    input:disabled,
+    input:disabled ~ .input-icon {
+        @apply opacity-50;
+    }
+
     .input-icon {
         @apply absolute left-4 top-1/2 -translate-y-1/2;
     }
+
+    /* .sidebar-link {
+        @apply flex gap-4 items-center py-5 text-dark-grey hover:text-black;
+    }
+
+    .sidebar-link.active {
+        @apply text-black border-r-2 border-black pl-6 bg-grey/50 -ml-6 md:rounded-tl-lg md:rounded-bl-lg max-md:border-none;
+    } */
 
     #textEditor h2,
     h2 {
@@ -84,9 +97,27 @@
         @apply font-inter text-3xl leading-loose max-md:text-2xl max-md:leading-normal !important;
     }
 
-    #textEditor * {
+    #textEditor *,
+    .blog-page-content * {
         @apply font-gelasio text-xl leading-10 md:text-2xl;
     }
+
+    #textEditor a,
+    .blog-page-content a {
+        @apply text-purple underline hover:opacity-50;
+    }
+
+    /* .tag {
+        @apply p-3 bg-grey rounded-full px-6 capitalize;
+    } */
+
+    .blog-title {
+        @apply text-2xl font-medium leading-7 line-clamp-3 sm:line-clamp-2;
+    }
+
+    /* .blog-index {
+        @apply text-4xl sm:text-3xl lg:text-5xl font-bold text-grey leading-none;
+    } */
 }
 
 .ce-block__content,
